# event_management_api

./: .env.example  .gitignore  README.md  db.sqlite3  main.py  pyproject.toml  requirements.txt
config/: settings.py  urls.py
events/: admin.py  models.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_event_created_at_event_updated_at.py
