[project]
name = "event-management-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "django-environ>=0.13.0",
    "django-filter>=25.2",
    "django-jazzmin>=3.0.4",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-yasg>=1.21.15",
    "pillow>=12.2.0",
]
